--- a/ChengYuDaHuiGame/res/layout/activity_chat.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_chat.xml
@@ -8,7 +8,7 @@
         android:layout_width="fill_parent"
         android:layout_height="0.0dip"
         android:layout_weight="1.0"
-        android:background="@android:color/background_dark" >
+        android:background="@android:color/darker_gray" >
 
         <com.zhaoyan.juyou.game.chengyudahui.friend.XListView
             android:id="@+id/mListView"
