--- a/ChengYuDaHuiGame/res/layout/item_chat_received_message.xml
+++ b/ChengYuDaHuiGame/res/layout/item_chat_received_message.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -17,23 +18,20 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp" >
 
-        <ImageView
+        <com.zhaoyan.juyou.game.chengyudahui.view.RoundedImageView
             android:id="@+id/iv_avatar"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/avatar_height"
+            android:layout_height="@dimen/avatar_height"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:contentDescription="avator"
             android:layout_marginLeft="5dp"
-            android:background="@drawable/avantar_test"
-            android:scaleType="fitXY" />
+            android:scaleType="center"
+            app:riv_corner_radius="90dp" />
 
         <TextView
             android:id="@+id/tv_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/iv_avatar"
             android:background="@drawable/msg_bubble_left"
             android:clickable="true"
@@ -43,7 +41,7 @@
             android:maxWidth="225.0dip"
             android:minWidth="50dp"
             android:minHeight="50dp"
-            android:paddingLeft="15dp"
+            android:paddingLeft="20dp"
             android:paddingRight="5dp"
             android:textColor="#ff000000"
             android:textSize="15sp" />
