--- a/ChengYuDaHuiGame/res/values/dimens.xml
+++ b/ChengYuDaHuiGame/res/values/dimens.xml
@@ -5,5 +5,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     
     <dimen name="zy_action_bar_height">48dp</dimen>
+    
+    <dimen name="avatar_height">48dp</dimen>
 
 </resources>
