--- a/ChengYuDaHuiGame/res/values/dimens.xml
+++ b/ChengYuDaHuiGame/res/values/dimens.xml
@@ -7,5 +7,7 @@
     <dimen name="zy_action_bar_height">48dp</dimen>
     
     <dimen name="avatar_height">48dp</dimen>
+    
+    <dimen name="popupwindow_offset">76dp</dimen>
 
 </resources>
