--- a/ChengYuDaHuiGame/res/anim/head_out.xml
+++ b/ChengYuDaHuiGame/res/anim/head_out.xml
@@ -7,6 +7,16 @@
         android:fromYScale="1.0"   
         android:toYScale="0.001"   
         android:pivotX="100%"  
-        android:pivotY="10%" 
+        android:pivotY="0%" 
         android:duration="200" />  
-   
+        <!--  
+     <scale   xmlns:android="http://schemas.android.com/apk/res/android"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"  
+        android:fromXScale="1.0"   
+        android:toXScale="0.001"   
+        android:fromYScale="1.0"   
+        android:toYScale="0.001"   
+        android:pivotX="100%"  
+        android:pivotY="0%"   //0% 10% 100% 自己尝试
+        android:duration="200" />  
+        -->
