--- a/ChengYuDaHuiGame/res/drawable/tab_textcolor.xml
+++ b/ChengYuDaHuiGame/res/drawable/tab_textcolor.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item  android:state_selected="true" android:color="#4f9ef6"/>
-    <item android:state_selected="false" android:color="#ffffff"/>
+    <item  android:state_selected="true" android:color="#ffffff"/>
+    <item android:state_selected="false" android:color="#f4f5f6"/>
 
 </selector>
