modify write ui

--- a/ChengYuDaHuiGame/res/layout/dictate_item_main.xml
+++ b/ChengYuDaHuiGame/res/layout/dictate_item_main.xml
@@ -10,11 +10,9 @@
         android:id="@+id/item_select_dictate"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="10dip"
-        android:columnWidth="50dip"
-        android:horizontalSpacing="25dip"
+        android:horizontalSpacing="16dp"
         android:listSelector="@android:color/transparent"
-        android:numColumns="4"
+        android:numColumns="3"
         android:padding="10dip"
         android:scrollbars="none"
         android:verticalSpacing="25dip"
