--- a/ChengYuDaHuiGame/res/layout/dictate_ietm.xml
+++ b/ChengYuDaHuiGame/res/layout/dictate_ietm.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="50dip"
-    android:layout_height="50dip"
-    android:background="@drawable/dictate_right_item_selector"
-    android:gravity="center"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/write_item_selector"
     android:orientation="vertical"
+    android:gravity="center_horizontal"
     android:padding="10dip" >
+    
+    <ImageView 
+        android:id="@+id/iv_dictate_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:src="@drawable/write_result_unknow"
+        />
 
     <TextView
         android:id="@+id/tv_dictate_item"
-        android:layout_width="50dip"
-        android:layout_height="50dip"
-        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:textColor="@android:color/darker_gray"
         android:text="test" />
 
 </LinearLayout>
