modify write module

--- a/ChengYuDaHuiGame/res/layout/activity_dictate.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_dictate.xml
@@ -2,86 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_activity"
     android:orientation="vertical" >
-
-    <RelativeLayout
-        android:id="@+id/title_top_dictate_game"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/title_top_bg" >
-
-        <TextView
-            android:id="@+id/tv_jifen_dictate_game"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:drawableLeft="@drawable/ic_jifen"
-            android:gravity="center_vertical"
-            android:singleLine="true"
-            android:text="0" />
-
-        <TextView
-            android:id="@+id/tv_gold_dictate_game"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_toLeftOf="@id/tv_jifen_dictate_game"
-            android:drawableLeft="@drawable/ic_gold"
-            android:gravity="center_vertical"
-            android:singleLine="true"
-            android:text="0" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/title_dictate_game"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@id/title_top_dictate_game"
-        android:background="@drawable/title_chengyu_bg" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:text="汉字听写"
-            android:textColor="@android:color/black"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-
-        <ImageView
-            android:id="@+id/iv_back_dictate_game"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentLeft="true"
-            android:clickable="true"
-            android:padding="10dp"
-            android:src="@drawable/ic_back_selector" />
-    </RelativeLayout>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/title_dictate_game"
-        android:paddingBottom="5dip"
-        android:scaleType="fitXY"
-        android:src="@drawable/activity_middle" />
-
-    <TextView
-        android:id="@+id/dictate_pinyin"
-        android:layout_width="match_parent"
-        android:layout_height="50dip"
-        android:layout_below="@+id/title_dictate_game"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:visibility="gone" />
 
     <LinearLayout
         android:id="@+id/dictate_word_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/dictate_pinyin"
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:orientation="horizontal" >
@@ -397,7 +323,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dip"
-        android:background="@drawable/list_click_item_selector"
+        android:background="@drawable/button_red_selector"
+        android:textColor="@android:color/white"
         android:text="@string/show_result" />
 
     <TextView
