--- a/ChengYuDaHuiGame/res/layout/dictate_result_layout.xml
+++ b/ChengYuDaHuiGame/res/layout/dictate_result_layout.xml
@@ -9,7 +9,8 @@
         android:scaleType="fitXY"
         android:layout_width="310dip"
         android:layout_height="370dip"
-        android:src="@drawable/bg_activity" />
+        android:background="@drawable/write_dialog_bg" 
+        />
 
     <LinearLayout
         android:id="@+id/dictate_result_show_layout"
@@ -123,14 +124,14 @@
                 android:layout_height="55dip"
                 android:clickable="true"
                 android:scaleType="fitXY"
-                android:src="@drawable/short_btn_bg_selector" />
+                android:src="@drawable/button_blue_selector" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="太棒了，书写正确"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </RelativeLayout>
@@ -146,14 +147,14 @@
                 android:layout_height="55dip"
                 android:clickable="true"
                 android:scaleType="fitXY"
-                android:src="@drawable/short_btn_bg_selector" />
+                android:src="@drawable/button_gray_selector" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="记下来，下次复习"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </RelativeLayout>
@@ -169,14 +170,14 @@
                 android:layout_height="55dip"
                 android:clickable="true"
                 android:scaleType="fitXY"
-                android:src="@drawable/short_btn_bg_selector" />
+                android:src="@drawable/button_red_selector" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="秀墨宝给小伙伴们"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </RelativeLayout>
