--- a/ChengYuDaHuiGame/res/layout/item_chat_sent_voice.xml
+++ b/ChengYuDaHuiGame/res/layout/item_chat_sent_voice.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
@@ -18,25 +18,37 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp" >
 
-        <com.zhaoyan.juyou.game.chengyudahui.view.RoundedImageView
-            android:id="@+id/iv_avatar"
-            android:layout_width="@dimen/avatar_height"
-            android:layout_height="@dimen/avatar_height"
+        <FrameLayout
+            android:id="@+id/fl_avatar"
+            android:layout_width="58dp"
+            android:layout_height="58dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_marginRight="5dp"
-            android:scaleType="center"
-            app:riv_corner_radius="90dp" />
+            android:layout_marginRight="5dp" >
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                />
+
+            <com.zhaoyan.juyou.game.chengyudahui.view.RoundedImageView
+                android:id="@+id/iv_avatar"
+                android:layout_width="@dimen/avatar_height"
+                android:layout_height="@dimen/avatar_height"
+                android:scaleType="center"
+                android:src="@drawable/avantar_test"
+                app:riv_corner_radius="90dp" />
+        </FrameLayout>
 
         <LinearLayout
             android:id="@+id/layout_voice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/iv_avatar"
+            android:layout_toLeftOf="@id/fl_avatar"
             android:background="@drawable/msg_bubble_right"
-            android:minWidth="80dp"
-            android:minHeight="45dp"
             android:gravity="right"
+            android:minHeight="45dp"
+            android:minWidth="80dp"
             android:paddingBottom="5dp"
             android:paddingLeft="5dp"
             android:paddingRight="20dp"
