--- a/ChengYuDaHuiGame/res/layout/appinfo.xml
+++ b/ChengYuDaHuiGame/res/layout/appinfo.xml
@@ -35,7 +35,7 @@
                     android:layout_height="48dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="8dp"
-                    android:src="@drawable/ic_launcher1" />
+                    android:src="@drawable/ic_launcher" />
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
