--- a/ChengYuDaHuiGame/res/layout/item_chat_sent_message.xml
+++ b/ChengYuDaHuiGame/res/layout/item_chat_sent_message.xml
@@ -38,7 +38,7 @@
                 android:layout_height="@dimen/avatar_height"
                 android:layout_centerInParent="true"
                 android:scaleType="center"
-                android:src="@drawable/avantar_test"
+                android:src="@drawable/default_avatar"
                 app:riv_corner_radius="90dp" />
         </RelativeLayout>
 
