--- a/ChengYuDaHuiGame/res/layout/story_item.xml
+++ b/ChengYuDaHuiGame/res/layout/story_item.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
     
-    <ProgressBar 
+<!--     <ProgressBar  -->
+<!--         android:id="@+id/story_bar_loading" -->
+<!--         android:layout_width="wrap_content" -->
+<!--         android:layout_height="fill_parent" -->
+<!--         android:layout_centerInParent="true" -->
+<!--         style="@android:style/Widget.ProgressBar.Large.Inverse" -->
+<!--         /> -->
+    <com.zhaoyan.juyou.game.chengyudahui.view.CircularProgress
         android:id="@+id/story_bar_loading"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:borderWidth="6dp"
         android:layout_centerInParent="true"
-        style="@android:style/Widget.ProgressBar.Large.Inverse"
         />
     
     <com.zhaoyan.juyou.game.chengyudahui.view.TableTitleView
