--- a/ChengYuDaHuiGame/res/values/drawables.xml
+++ b/ChengYuDaHuiGame/res/values/drawables.xml
@@ -12,4 +12,11 @@
         <item>@drawable/item_voice</item>
         <item>@drawable/item_chengyu</item>
     </integer-array>
+    
+    <integer-array name="interation_item_icons">
+        <item>@drawable/item_chuangguan</item>
+        <item>@drawable/item_dahui</item>
+        <item>@drawable/item_baike</item>
+        <item>@drawable/item_moive</item>
+    </integer-array>
 </resources>
